more work on transformations

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -13,6 +13,15 @@
   note = {Accessed 2019-06-19}
 }
 
+
+@misc{Stainless:issue519,
+  author = "Ramon Boss",
+  title = "Issue 519: Unknown type parameter type T in self referencing generic",
+  url = {https://github.com/epfl-lara/stainless/issues/519},
+  note = {Accessed 2019-06-27}
+}
+
+
 @misc{BitcoinS:github,
   author = "{The bitcoin-s developers}",
   title = "The bitcoin-s repository",
